--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -10,32 +10,83 @@
     >
 
 
+<ImageView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:src="@drawable/calendar_action_bar"
+    android:adjustViewBounds="true"
+    android:scaleType="centerCrop"/>
 
+    <LinearLayout
+        android:id="@+id/headerlayout"
+        android:layout_width="fill_parent"
+        android:layout_height="60sp"
+        android:background="@color/calendar_header"
+        android:gravity="start|top"
+        android:height="60sp"
+        android:orientation="horizontal" >
+        <Button
+            android:id="@+id/settings"
+            android:layout_width="54sp"
+            android:layout_height="60sp"
+            android:background="@color/calendar_header" />
 
+    <Button
+        android:id="@+id/selectedDayMonthYear"
+        android:layout_width="213sp"
+        android:layout_height="60sp"
+        android:layout_gravity="center"
+        android:background="@drawable/today_empty"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#FFFFFF" >
+    </Button>
+
+        <Button
+            android:id="@+id/addEvent"
+            android:layout_width="54sp"
+            android:layout_height="60sp"
+            android:background="@color/calendar_header"
+            android:text = "+"
+            android:textSize = "25sp"
+            android:textColor="@color/white"
+            />
+
+        </LinearLayout>
+    <ImageView
+        android:id ="@+id/selectedBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/today_bar"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
+
+        />
 
     <LinearLayout
         android:id="@+id/buttonlayout"
         android:layout_width="fill_parent"
         android:layout_height="60sp"
-        android:background="@color/sky"
+        android:background="@color/white"
         android:gravity="left|top"
         android:height="60sp"
         android:orientation="horizontal" >
 
-        <Button
-            android:id="@+id/settings"
-            android:layout_width="54sp"
-            android:layout_height="60sp"
-            android:background="@color/sky" />
+
+
+
+
+
 
         <ImageView
             android:id="@+id/prevMonth"
-            android:layout_width="20sp"
+            android:layout_width="30sp"
             android:layout_height="fill_parent"
             android:layout_gravity="center"
             android:layout_marginLeft="10sp"
-            android:src="@drawable/calendar_left_arrow_selector" >
+            android:src="@drawable/left_arrow" >
         </ImageView>
+
+
 
         <TextView
             android:id="@+id/currentMonth"
@@ -44,38 +95,22 @@
             android:layout_weight="0.6"
             android:gravity="center"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="#FFFFFF" >
+            android:textColor="@color/black" >
         </TextView>
 
         <ImageView
             android:id="@+id/nextMonth"
-            android:layout_width="20sp"
+            android:layout_width="30sp"
             android:layout_height="fill_parent"
             android:layout_gravity="center"
             android:layout_marginRight="10sp"
-            android:src="@drawable/calendar_right_arrow_selector" >
+            android:src="@drawable/right_arrow" >
         </ImageView>
 
-        <Button
-            android:id="@+id/addEvent"
-            android:layout_width="54sp"
-            android:layout_height="60sp"
-            android:background="@color/sky"
-            android:text = "+"
-            android:textSize = "25sp"
-            android:textColor="@color/input_login_hint"
-            />
+
     </LinearLayout>
 
-    <Button
-        android:id="@+id/selectedDayMonthYear"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:background="@drawable/calendar_top_header"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="#FFFFFF" >
-    </Button>
+
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -86,6 +121,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="0dp"
+            android:background="@color/white"
             android:shrinkColumns="1"
             android:stretchColumns="*"
 
@@ -168,7 +204,10 @@
     </LinearLayout>
     <GridView
         android:id="@+id/calendar"
+        android:background="@color/white"
         android:layout_width="fill_parent"
+        android:layout_marginLeft="2sp"
+
         android:layout_height="wrap_content"
         android:gravity="center"
         android:numColumns="7" >
