--- a/app/src/main/res/layout/activity_calendar_events_view.xml
+++ b/app/src/main/res/layout/activity_calendar_events_view.xml
@@ -4,6 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="${relativePackage}.${activityClass}" >
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/calendar_action_bar"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"/>
 <ScrollView
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
@@ -13,24 +19,37 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_centerInParent="true"
-    android:layout_marginLeft="20dp"
-    android:layout_marginRight="20dp"
+    android:layout_marginLeft="0dp"
+    android:layout_marginRight="0dp"
     android:gravity="center"
     android:orientation="vertical">
 
     <TextView
         android:text="DAY"
         android:id="@+id/calendar_eventsview_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="70sp"
         android:padding="10dp"
-        android:textColor="@color/lbl_name"
-        android:layout_gravity="center"
+        android:textColor="@color/white"
+        android:background = "@drawable/today_empty"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
+        android:layout_marginTop="10sp"
+        android:gravity="center"
         android:textSize="20sp" />
+
+    <ImageView
+        android:layout_width="100sp"
+        android:layout_height="wrap_content"
+        android:src="@drawable/events_list_sign"
+        android:adjustViewBounds="true"
+        android:layout_marginTop="20dp"
+        android:scaleType="centerCrop"/>
+
     <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="20dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:shrinkColumns="*"
@@ -42,8 +61,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:shrinkColumns="*"
         android:stretchColumns="*"
         android:id="@+id/calendar_events_buttons">
