--- a/app/src/main/res/layout/activity_create_event.xml
+++ b/app/src/main/res/layout/activity_create_event.xml
@@ -4,28 +4,42 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="${relativePackage}.${activityClass}" >
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/calendar_action_bar"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"/>
+
     <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="32dp">
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginTop="0dp"
             android:gravity="center"
             android:orientation="vertical">
 
+
             <TextView
-                android:text="Add new event"
+                android:text="Update Event"
                 android:id="@+id/create_event_heading"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="fill_parent"
+                android:layout_height="70sp"
                 android:padding="10dp"
-                android:textColor="@color/lbl_name"
-                android:layout_gravity="center"
+                android:textColor="@color/white"
+                android:background = "@drawable/today_empty"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+
+                android:gravity="center"
                 android:textSize="20sp" />
 
             <EditText
@@ -33,10 +47,13 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:background="@color/white"
+                android:background="@color/add_update_event_edittext"
                 android:hint="@string/hint_event_name"
                 android:inputType="text"
                 android:padding="10dp"
+                android:layout_marginTop="15sp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:singleLine="true"
                 android:textColor="@color/input_login"
                 android:textColorHint="@color/input_login_hint" />
@@ -46,9 +63,11 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:background="@color/white"
+                android:background="@color/add_update_event_edittext"
                 android:hint="@string/hint_event_description"
                 android:inputType="text"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:padding="10dp"
                 android:singleLine="true"
                 android:textColor="@color/input_login"
@@ -58,9 +77,12 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:background="@color/white"
+                android:background="@color/add_update_event_edittext"
                 android:hint="@string/hint_event_date"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:padding="10dp"
+                android:textSize="18sp"
                 android:singleLine="true"
                 android:textColor="@color/input_login"
                 android:textColorHint="@color/input_login_hint" />
@@ -69,9 +91,12 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:background="@color/white"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:background="@color/add_update_event_edittext"
                 android:hint="@string/hint_event_starttime"
                 android:padding="10dp"
+                android:textSize="18sp"
                 android:singleLine="true"
                 android:textColor="@color/input_login"
                 android:textColorHint="@color/input_login_hint" />
@@ -80,7 +105,10 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:background="@color/white"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:textSize="18sp"
+                android:background="@color/add_update_event_edittext"
                 android:hint="@string/hint_event_endname"
                 android:padding="10dp"
                 android:singleLine="true"
@@ -100,7 +128,9 @@
                     <Button android:id="@+id/button_add_event"
                         android:layout_height="wrap_content"
                         android:layout_width="150px"
-                        android:text="Add new event"
+                        android:text="  Add new event  "
+                        android:textColor="@color/white"
+                        android:background="@color/add_update_event"
                         android:layout_gravity="center"
                         android:gravity="center"
                         />
