FAQ - major design changes Profile - major design changes Create event - issue #13 fix

--- a/app/src/main/res/layout/activity_create_event.xml
+++ b/app/src/main/res/layout/activity_create_event.xml
@@ -29,7 +29,7 @@
 
 
             <TextView
-                android:text="Update Event"
+                android:text="Create Event"
                 android:id="@+id/create_event_heading"
                 android:layout_width="fill_parent"
                 android:layout_height="70sp"
