--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -3,29 +3,63 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="${relativePackage}.${activityClass}" >
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/my_details_action_bar"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"/>
+
     <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:layout_marginTop="5dp">
+        android:layout_marginTop="32dp">
+
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_centerInParent="true"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="0dp"
             android:gravity="center"
             android:orientation="vertical"
             >
 
+            <!--frame layout for name -->
+            <FrameLayout
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                xmlns:android="http://schemas.android.com/apk/res/android">
             <ImageView
                 android:id="@+id/profile_pic"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dip"
-
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/avatar_empty"
                 android:gravity="center"
                  />
+
+
+
+                <!-- name-->
+                <TextView
+                    android:id="@+id/patient_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    android:layout_gravity="center|bottom"
+                    android:layout_marginBottom="20dp"/>
+
+
+
+
+            </FrameLayout>
 
 
             <!--heading-->
@@ -33,45 +67,27 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/profile"
-                android:textSize="25dp" />
+                android:textSize="25dp"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/profile_heading"/>
             <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="25dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
                 android:stretchColumns="*"
                 android:shrinkColumns="1"
                 android:id="@+id/profile_table">
-                <TableRow>
 
-                    <TextView
-                        android:text="@string/profile_name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="10dp"
-                        android:textColor="@color/lbl_name"
-                        android:textSize="18sp"
-                        android:layout_gravity="left"
-                        android:layout_marginTop="-10dp"/>
-
-                    <!-- name-->
-                    <TextView
-                        android:id="@+id/patient_name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="10dp"
-                        android:textColor="@color/input_login_hint"
-                        android:textSize="16sp"
-                        android:layout_gravity="right"
-                        android:layout_marginTop="-10dp"/>
-                </TableRow>
                 <TableRow>
                     <TextView
                         android:text="@string/profile_id"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="10dp"
-                        android:textColor="@color/lbl_name"
+                        android:textColor="@color/profile_left"
                         android:textSize="18sp"
                         android:layout_gravity="left"
                         android:layout_marginTop="-10dp"/>
@@ -82,7 +98,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="10dp"
-                        android:textColor="@color/input_login_hint"
+                        android:textColor="@color/profile_right"
                         android:textSize="16sp"
                         android:layout_gravity="right"
                         android:layout_marginTop="-10dp"/>
@@ -95,7 +111,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="10dp"
-                        android:textColor="@color/lbl_name"
+                        android:textColor="@color/profile_left"
                         android:textSize="18sp"
                         android:layout_gravity="left"
                         android:layout_marginTop="-10dp"/>
@@ -104,7 +120,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="10dp"
-                        android:textColor="@color/input_login_hint"
+                        android:textColor="@color/profile_right"
                         android:textSize="16sp"
                         android:layout_gravity="right"
                         android:layout_marginTop="-10dp"/>
@@ -117,7 +133,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="10dp"
-                        android:textColor="@color/lbl_name"
+                        android:textColor="@color/profile_left"
                         android:textSize="18sp"
                         android:layout_gravity="left"
                         android:layout_marginTop="-10dp"/>
@@ -126,7 +142,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="10dp"
-                        android:textColor="@color/input_login_hint"
+                        android:textColor="@color/profile_right"
                         android:textSize="16sp"
                         android:layout_gravity="right"
                         android:layout_marginTop="-10dp"/>
@@ -138,7 +154,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="10dp"
-                        android:textColor="@color/lbl_name"
+                        android:textColor="@color/profile_left"
                         android:textSize="18sp"
                         android:layout_gravity="left"
                         android:layout_marginTop="-10dp"/>
@@ -147,7 +163,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="10dp"
-                        android:textColor="@color/input_login_hint"
+                        android:textColor="@color/profile_right"
                         android:textSize="16sp"
                         android:layout_gravity="right"
                         android:layout_marginTop="-10dp"/>
