--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -36,6 +36,10 @@
     <color name="essential_contacts_bg">#EDEDED</color>
     <color name="essential_contacts_headings">#9D9D9C</color>
 
+    <color name="profile_heading">#2781C4</color>
+    <color name="profile_left">#575656</color>
+    <color name="profile_right">#878786</color>
+
     <color name="black">#000000</color>
     <color name="symptom_color_selected">#003366</color>
     <color name="reaction_color_selected">#003366</color>
