--- a/app/src/main/res/layout/activity_healthcheck.xml
+++ b/app/src/main/res/layout/activity_healthcheck.xml
@@ -1,22 +1,80 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:context="vladislavsignatjevs.renaldyalisys.Healthcheck">
+    tools:context="${relativePackage}.${activityClass}" >
 
-
-
-    <include layout="@layout/content_healthcheck"/>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
+    <ImageView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:src="@android:drawable/ic_dialog_email" />
+        android:src="@drawable/check_action_bar"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"/>
 
-</android.support.design.widget.CoordinatorLayout>
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_marginTop="32dp">
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_centerInParent="true"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="0dp"
+            android:gravity="center"
+            android:orientation="vertical"
+            >
+
+
+
+
+            <!--heading-->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/healthcheck_title"
+                android:textSize="25sp"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/profile_heading"/>
+
+            <!--heading-->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/healthcheck_test_description"
+                android:textSize="18sp"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="20dp"
+                android:gravity="center"
+                android:textColor="@color/profile_left"/>
+
+
+            <Button
+                android:id="@+id/checkHealthButton"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dip"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:background="@color/btn_login_bg"
+                android:text="@string/healthcheck_title"
+                android:textColor="@color/btn_login" />
+
+            <Button
+                android:id="@+id/viewGraphsButton"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dip"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:background="@color/sky"
+                android:text="@string/healthcheck_test_viewGraphs"
+                android:textColor="@color/btn_login" />
+
+        </LinearLayout>
+    </ScrollView>
+</RelativeLayout>
