--- a/app/src/main/res/layout/activity_calendar_events_view.xml
+++ b/app/src/main/res/layout/activity_calendar_events_view.xml
@@ -14,16 +14,20 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
-    android:layout_marginTop="20dp">
+    android:layout_marginTop="22dp">
 <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_centerInParent="true"
-    android:layout_marginLeft="0dp"
+    android:layout_marginTop="0dp"
     android:layout_marginRight="0dp"
     android:gravity="center"
     android:orientation="vertical">
+    <FrameLayout
 
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        xmlns:android="http://schemas.android.com/apk/res/android">
     <TextView
         android:text="DAY"
         android:id="@+id/calendar_eventsview_date"
@@ -37,6 +41,19 @@
         android:layout_marginTop="10sp"
         android:gravity="center"
         android:textSize="20sp" />
+
+    <Button android:id="@+id/button_add_new_event"
+        android:background="@color/calendar_header"
+        android:layout_width="50sp"
+        android:layout_height="70sp"
+        android:textColor="@color/white"
+        android:textSize = "25sp"
+        android:text="+"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:layout_gravity="right|top"/>
+        />
+    </FrameLayout>
 
     <ImageView
         android:layout_width="100sp"
@@ -57,26 +74,7 @@
         android:id="@+id/calendar_events_main_table">
 
     </TableLayout>
-    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:shrinkColumns="*"
-        android:stretchColumns="*"
-        android:id="@+id/calendar_events_buttons">
-      <TableRow>
-          <Button android:id="@+id/button_add_new_event"
-              android:layout_height="wrap_content"
-              android:layout_width="150px"
-              android:text="Add new event"
-              android:layout_gravity="center"
-              android:gravity="center"
-              />
-
-      </TableRow>
-    </TableLayout>
+   
 
 
 </LinearLayout>
